amazon_clone_css_fixes_part_1

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+.size_full {
+    width: full;
+    height: screen;
+}
+
+.inherit_bg {
+    background-color: white;
+}
+
+.icon_size {
+    width: 35px;
+    height: 50px;
+}
+
+.text_bold {
+    font-size: large;
+    font: bold;
+}
