amazon_clone_css_fixes_part_2

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,11 @@
     font-size: large;
     font: bold;
 }
+
+.cart_items_checkout {
+    width: auto;
+    height: auto;
+    display:flex;
+    flex-direction: row;
+}
+
