--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
 
 .text_bold {
     font-size: large;
-    font: bold;
+    font-weight: 700;
 }
 
 .cart_items_checkout {
@@ -27,4 +27,5 @@
     display:flex;
     flex-direction: row;
 }
+
 
