"amazon_clone_css_fixes_part_3"

--- a/components/navbar/NavbarTop.css
+++ b/components/navbar/NavbarTop.css
@@ -2,7 +2,7 @@
     @apply flex bg-amazonColors-default text-white h-[60px]
 }
 
-.nav_container {
+.navbarTop_container {
     @apply flex items-center p-2 m-4
 }
 
