--- a/components/checkout/Checkout.css
+++ b/components/checkout/Checkout.css
@@ -1,3 +1,63 @@
 .btn_checkout {
-    @apply text-xs border border-solid border-gray-100 rounded-lg p-1.5 shadow-lg hover:bg-slate-100
+    @apply text-xs border border-solid border-gray-100 rounded-lg 
+    p-1.5 shadow-lg hover:bg-slate-100
+}
+
+.checkout_container {
+    @apply h-screen bg-amazonColors-backgroundColor overflow-scroll
+}
+
+.checkout_banner_section {
+    @apply min-w-[700px] max-w-[1000px] h-[140px] 
+    m-auto pt-8 flex items-center justify-center
+}
+
+.checkout_banner {
+    @apply bg-white w-[90%] h-[100%] flex 
+    flex-row justify-center items-center gap-20
+}
+
+.checkout_banner_link {
+    @apply text-sm border border-solid border-gray-200 
+    rounded-lg p-1.5 shadow-lg hover:bg-slate-100
+}
+
+.checkout_items_container {
+    @apply min-w-[50%] max-w-[70%] h-auto m-auto pt-8
+}
+
+.checkout_items_div {
+    @apply grid grid-cols-8 gap-10 mb-12
+}
+
+.checkout_items {
+    @apply col-span-6 bg-white
+}
+
+.checkout_items_cart {
+    @apply text-2xl xl:text-3xl mt-4 pl-10
+}
+
+.checkout_items_price {
+    @apply flex flex-col items-end mr-8
+}
+
+.checkout_items_total {
+    @apply text-lg xl:text-xl text-right mb-2 mr-10 
+}
+
+.checkout_box {
+    @apply col-span-2 bg-white rounded h-[280px] w-[300px] p-10
+}
+
+.checkout_box_text {
+    @apply text-xs text-green-800 mb-2
+}
+
+.checkout_box_total {
+    @apply text-base xl:text-lg mb-4 
+}
+
+.checkout_box_btn {
+    @apply bg-yellow-400 p-1.5 rounded-xl w-[100%] mt-2 text-sm hover:bg-yellow-500 hover:border
 }
