--- a/components/footer/Footer.css
+++ b/components/footer/Footer.css
@@ -1,5 +1,6 @@
 .footer_div {
-    @apply w-full md:w-full h-20 bg-amazonColors-lightBlue text-gray-300 flex items-center justify-center gap-4
+    @apply w-full md:w-full h-20 bg-amazonColors-lightBlue 
+    text-gray-300 flex items-center justify-center gap-4
 }
 
 .footer_text {
@@ -7,5 +8,6 @@
 }
 
 .footer_link {
-    @apply hover:text-white hover:underline decoration-[1px] cursor-pointer 
+    @apply hover:text-white hover:underline 
+    decoration-[1px] cursor-pointer 
 }
