--- a/components/main/CarouselCategory.css
+++ b/components/main/CarouselCategory.css
@@ -1,7 +1,7 @@
-.carousel_cat_div {
+.carousel__cat--div {
     @apply bg-white max-w-[1480px] m-auto p-5
 }
 
-.carousel_cat_swiper {
+.carousel__cat--swiper {
     @apply text-2xl font-semibold m-auto
 }
