--- a/components/main/HomePage.css
+++ b/components/main/HomePage.css
@@ -1,11 +1,11 @@
-.homePage_div {
+.homePage__div {
     @apply bg-amazonColors-backgroundColor
 }
 
-.homePage_carousel {
+.homePage__carousel {
     @apply m-auto min-w-[1000px] max-w-[1500px]
 }
 
-.homePage_card {
+.homePage__card {
     @apply grid grid-cols-3 xl:grid-cols-4 -mt-60
 }
