--- a/app/product/page.css
+++ b/app/product/page.css
@@ -1,3 +1,3 @@
-.product_page_container {
+.product__page--container {
     @apply grid grid-cols-6 m-8 p-10 bg-amazonColors-backgroundColor h-[1000px]
 }
