--- a/components/checkout/CheckoutEmpty.css
+++ b/components/checkout/CheckoutEmpty.css
@@ -1,26 +1,26 @@
 
-.checkout_empty_img {
+.checkout__empty--img {
     @apply w-[500px] h-[280px] p-10
 }
 
-.checkout_empty_div {
+.checkout__empty--div {
     @apply p-6 mt-6
 }
 
-.checkout_empty_text {
+.checkout__empty--text {
     @apply text-base md:text-2xl
 }
 
-.checkout_empty_link {
+.checkout__empty--link {
     @apply text-xs font-semibold text-cyan-700 mb-4
 }
 
-.checkout_empty_btn_first {
+.checkout__empty--btn__first {
     @apply bg-yellow-400 p-1.5 mr-2 rounded-lg 
     text-sm shadow-lg hover:bg-yellow-500 cursor-pointer
 }
 
-.checkout_empty_btn_second {
+.checkout__empty--btn__second {
     @apply bg-white shadow-lg border p-1.5 mr-2 
     rounded-lg text-sm hover:bg-gray-100 cursor-pointer
 }
