--- a/components/footer/Footer.css
+++ b/components/footer/Footer.css
@@ -1,13 +1,13 @@
-.footer_div {
+.footer__div {
     @apply w-full md:w-full h-20 bg-amazonColors-lightBlue 
     text-gray-300 flex items-center justify-center gap-4
 }
 
-.footer_text {
+.footer__text {
     @apply text-sm -mt-4
 }
 
-.footer_link {
+.footer__link {
     @apply hover:text-white hover:underline 
     decoration-[1px] cursor-pointer 
 }
