--- a/components/main/Card.css
+++ b/components/main/Card.css
@@ -1,19 +1,19 @@
-.card_div {
+.card__div {
     @apply h-[420px] bg-white m-3 
 }
 
-.card_title {
+.card__title {
     @apply text-lg xl:text-xl font-semibold ml-4 mt-4
 }
 
-.card_img_div {
+.card__img--div {
     @apply h-[300px] m-4
 }
 
-.card_img {
+.card__img {
     @apply h-[100%] w-[100%] object-cover cursor-pointer
 }
 
-.card_link {
+.card__link {
     @apply text-xs xl:text-sm text-blue-500 ml-4 hover:text-orange-500 cursor-pointer
 }
