--- a/components/search/Search.css
+++ b/components/search/Search.css
@@ -1,18 +1,18 @@
-.search_container {
+.search__container {
    @apply w-[100%] flex items-center h-10 bg-amazonColors-backgroundColor rounded ml-3
 }
 
-.select_field {
+.select__field {
    @apply text-gray-500 border text-xs bg-amazonColors-backgroundColor p-2 rounded-l
 }
 
-.input_field {
+.search__input--field {
    @apply flex grow items-center rounded h-[100%] w-[100%] p-2 text-black
 }
-.btn {
+.search__btn {
     @apply w-[45px] rounded p-1 bg-amazonColors-amazonYellow hover:bg-yellow-500
 }
 
-.mgnfy {
+.search__mgnfy {
     @apply h-[32px] text-black mr-1
 }
